feat: rotas da api  para analytic
