# routes/api/analytic.js
@@ -4,10 +4,10 @@ const AnalyticController = require('../../controllers/AnalyticController');
 const {loggedUser} = require('../../helpers/loggedUser');
 
 router.delete('/:id', new AnalyticController().removeApi);
+//funciona
 
-// TODO
-// router.get('/', loggedUser, new AnalyticController().index);
-// router.get('/add', loggedUser, new AnalyticController().add);
-// router.post('/add/nova', loggedUser, new AnalyticController().saveAnalytic);
+// TO DO
+router.get('/:userId', new AnalyticController().indexApi);
+router.post('/save-analytic', new AnalyticController().saveAnalyticApi);
 
 module.exports = router;
