# routes/api/analyticByKeywordGroup.js
@@ -7,8 +7,8 @@ router.get('/word/chart', new AnalyticByKeywordGroupController().tokensCharts)
 router.get('/news/:type/:id', new AnalyticByKeywordGroupController().getNewsApi)
 
 // TO DO
-// router.get('/:id', new AnalyticByKeywordGroupController().index);
-// router.get('/sentimento/analise/:id', new AnalyticByKeywordGroupController().sentimentAnalysis)
-// router.get('/noticias-sentimento/:id', new AnalyticByKeywordGroupController().newsSentiment)
+//router.get('/:id', new AnalyticByKeywordGroupController().indexApi); - É de Durval
+router.get('/sentiment/analysis/:id', new AnalyticByKeywordGroupController().sentimentAnalysisApi)
+router.get('/news-sentiment/:id', new AnalyticByKeywordGroupController().newsSentimentApi)
 
 module.exports = router;
