# swagger_output.json
@@ -166,6 +166,92 @@
         }
       }
     },
+    "/api/analytic/by-keywords/sentiment/analysis/{id}": {
+      "get": {
+        "tags": [
+          "Analytic"
+        ],
+        "description": "Endpoint para obter a análise de sentimento de notícias refrente a um grupo específico de palavras chaves do analytic apresentado por origem de busca.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID do grupo de palavras chaves."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Analise de sentimentos de grupo de palavras chaves de Analytic - apresentado por fonte de busca.",
+            "schema": {
+              "$ref": "#/definitions/SentimentAnlaises"
+            }
+          },
+          "404": {
+            "description": "Não encontrado.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "Error processing groupId."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/analytic/by-keywords/news-sentiment/{id}": {
+      "get": {
+        "tags": [
+          "Analytic"
+        ],
+        "description": "Endpoint para obter a análise de sentimento de cada notícia, filtradas por grupo de palavras chave.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID do analytic."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Análise de sentimento de cada notícia, filtradas por grupo de palavras chave.",
+            "schema": {
+              "$ref": "#/definitions/NewsSentiment"
+            }
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Erro ao buscar as noticias.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "Error when searching for news."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/analytic/{id}": {
       "delete": {
         "tags": [
@@ -205,6 +291,95 @@
                 "error": {
                   "type": "string",
                   "example": "Analytic not found"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/analytic/{userId}": {
+      "get": {
+        "tags": [
+          "Analytic"
+        ],
+        "description": "Endpoint para obter analytics vinculado a um usuário.",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "id",
+            "description": "ID do usuário.",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Analytics vinculados a um usuário",
+            "schema": {
+              "$ref": "#/definitions/AnalyticUser"
+            }
+          },
+          "500": {
+            "description": "Analytic não encontrado.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "Internal Server Error"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/analytic/save-analytic": {
+      "post": {
+        "tags": [
+          "Analytic"
+        ],
+        "description": "Endpoint para criar Analytic.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Add new Analytic.",
+            "schema": {
+              "$ref": "#/definitions/AddAnaly"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Analytic criado com sucesso.",
+            "schema": {
+              "$ref": "#/definitions/SaveAnalytic"
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Erro ao slavar o Analytic.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "Internal Server Error"
                 }
               },
               "xml": {
@@ -291,6 +466,321 @@
               }
             }
           }
+        }
+      }
+    },
+    "SentimentAnlaises": {
+      "type": "object",
+      "properties": {
+        "ig": {
+          "type": "object",
+          "properties": {
+            "detecção de objetos": {
+              "type": "object",
+              "properties": {
+                "Positivas": {
+                  "type": "number",
+                  "example": 0
+                },
+                "Negativas": {
+                  "type": "number",
+                  "example": 6
+                },
+                "Neutras": {
+                  "type": "number",
+                  "example": 0
+                }
+              }
+            },
+            "processamento de imagens": {
+              "type": "object",
+              "properties": {
+                "Positivas": {
+                  "type": "number",
+                  "example": 2
+                },
+                "Negativas": {
+                  "type": "number",
+                  "example": 5
+                },
+                "Neutras": {
+                  "type": "number",
+                  "example": 0
+                }
+              }
+            }
+          }
+        },
+        "cnn": {
+          "type": "object",
+          "properties": {
+            "Visão Computacional": {
+              "type": "object",
+              "properties": {
+                "Positivas": {
+                  "type": "number",
+                  "example": 45
+                },
+                "Negativas": {
+                  "type": "number",
+                  "example": 15
+                },
+                "Neutras": {
+                  "type": "number",
+                  "example": 3
+                }
+              }
+            },
+            "detecção de objetos": {
+              "type": "object",
+              "properties": {
+                "Positivas": {
+                  "type": "number",
+                  "example": 47
+                },
+                "Negativas": {
+                  "type": "number",
+                  "example": 39
+                },
+                "Neutras": {
+                  "type": "number",
+                  "example": 4
+                }
+              }
+            },
+            "processamento de imagens": {
+              "type": "object",
+              "properties": {
+                "Positivas": {
+                  "type": "number",
+                  "example": 48
+                },
+                "Negativas": {
+                  "type": "number",
+                  "example": 39
+                },
+                "Neutras": {
+                  "type": "number",
+                  "example": 3
+                }
+              }
+            },
+            "detecção autonôma": {
+              "type": "object",
+              "properties": {
+                "Positivas": {
+                  "type": "number",
+                  "example": 18
+                },
+                "Negativas": {
+                  "type": "number",
+                  "example": 9
+                },
+                "Neutras": {
+                  "type": "number",
+                  "example": 0
+                }
+              }
+            }
+          }
+        },
+        "brasil-de-fato": {
+          "type": "object",
+          "properties": {
+            "processamento de imagens": {
+              "type": "object",
+              "properties": {
+                "Positivas": {
+                  "type": "number",
+                  "example": 9
+                },
+                "Negativas": {
+                  "type": "number",
+                  "example": 21
+                },
+                "Neutras": {
+                  "type": "number",
+                  "example": 0
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "NewsSentiment": {
+      "type": "object",
+      "properties": {
+        "newsSentimentGroup": {
+          "type": "object",
+          "properties": {
+            "Chat GPT": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "image": {
+                    "type": "string",
+                    "example": "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRTpTMipMk5HDcVS4jPGYTboz47Lp_stFZInuld9T87yj0b8Lau1t_DTOo2"
+                  },
+                  "title": {
+                    "type": "string",
+                    "example": "OpenAI apresenta nova solução que cria vídeos a partir de textos"
+                  },
+                  "origin": {
+                    "type": "string",
+                    "example": "ig"
+                  },
+                  "tags": {
+                    "type": "array",
+                    "example": [
+                      "IG",
+                      "Inovao",
+                      "OpenAI",
+                      "Sora",
+                      "Vdeos"
+                    ],
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+                  "totalPositiveWords": {
+                    "type": "number",
+                    "example": 10
+                  },
+                  "positiveWords": {
+                    "type": "string",
+                    "example": "solução, divulgação, rapidamente, acordo, céu, aventuras, resolver, ampliar, capaz, homenagem"
+                  },
+                  "totalNegativeWords": {
+                    "type": "number",
+                    "example": 7
+                  },
+                  "negativeWords": {
+                    "type": "string",
+                    "example": "violação, não, limitado, ódio, violência, exigem, problemas"
+                  },
+                  "date": {
+                    "type": "string",
+                    "example": "2024-02-16T14:05:00.000Z"
+                  }
+                }
+              }
+            },
+            "Visão Computacional": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "image": {
+                    "type": "string",
+                    "example": "https://www.cnnbrasil.com.br/wp-content/uploads/sites/12/2022/03/WhatsApp-Image-2022-03-17-at-17.27.40-e1647558325314.jpeg?w=347"
+                  },
+                  "title": {
+                    "type": "string",
+                    "example": " Cientistas criam prótese que permite que pessoas sintam temperatura "
+                  },
+                  "origin": {
+                    "type": "string",
+                    "example": "cnn"
+                  },
+                  "tags": {
+                    "type": "array",
+                    "example": [
+                      "Amputação",
+                      "Ciência",
+                      "Estudo"
+                    ],
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+                  "totalPositiveWords": {
+                    "type": "number",
+                    "example": 8
+                  },
+                  "positiveWords": {
+                    "type": "string",
+                    "example": "bem, importante, maior, capaz, sucesso, calor, acordo, permitir"
+                  },
+                  "totalNegativeWords": {
+                    "type": "number",
+                    "example": 7
+                  },
+                  "negativeWords": {
+                    "type": "string",
+                    "example": "não, adverte, risco, reduzir, morte, fantasma, dor"
+                  },
+                  "date": {
+                    "type": "string",
+                    "example": "2024-02-09T22:11:00.000Z"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "AnalyticUser": {
+      "type": "object",
+      "properties": {
+        "analytics": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "example": "65d4e02b46712317a3dfb6c7"
+              },
+              "name": {
+                "type": "string",
+                "example": "vanubia"
+              },
+              "createdAt": {
+                "type": "string",
+                "example": "2024-02-20T17:23:14.187Z"
+              },
+              "type": {
+                "type": "string",
+                "example": "by-category"
+              },
+              "category": {
+                "type": "string",
+                "example": "65b2b86fcf67b92db75e22bd"
+              },
+              "User": {
+                "type": "string",
+                "example": "65b36f0519b6c96b32b8ac3e"
+              },
+              "__v": {
+                "type": "number",
+                "example": 0
+              }
+            }
+          }
+        }
+      }
+    },
+    "AddAnaly": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Economia"
+        },
+        "type": {
+          "type": "string",
+          "example": "by-category"
+        },
+        "category": {
+          "type": "string",
+          "example": "Finanças"
+        },
+        "user": {
+          "type": "string",
+          "example": "65b36f0519b6c96b32b8ac3e"
         }
       }
     }
